Fixed layout issue. Added social links to hero section. Added types to todo service functions for better readability.

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,6 +6,12 @@
     margin-top: 0px;
 }
 
+.social-links a {
+    font-size: 2em;
+    margin: 0px .5em;
+    color: #CD5334;
+}
+
 .clipped-container {
     clip-path: polygon(0 0, 100% 0, 100% 43%, 0% 100%);
     height: 300px;
@@ -28,10 +34,6 @@
     background-color: #CD5334;
     color: #fff;
 }
-
-/* .skills-container {
-    background-color: #CD5334;
-} */
 
 #skill-heading {
     font-size: 2.3 !important;
